# Mandelbrot

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakelists.txt  Readme.md  license.md  main.cpp
CMake/: FindGMP.cmake
app/: CMakeLists.txt  main.cpp
app/inc/: arb_prec.hpp
app/src/: arb_prec.cpp
inc/: util.hpp
lib/: CMakeLists.txt
lib/BigNum/: BigFloat.h  BigInt.h  BigNum.h  BigNumWrapper.h  BigUInt.h  CMakeLists.txt
lib/BigNum/src/: BigFloat.c  BigInt.c  BigNum.c  BigNumWrapper.cpp  BigUInt.c
lib/glad/: CMakeLists.txt  glad.c  glad.h
res/: CMakeLists.txt  gen_shaders.sh
res/shaders/: bignum.frag  bignum_uint.frag  fragment_shader.frag  vertex_shader.vert
tools/: CMakeLists.txt  CMakelists.txt  ShaderGenTool.cpp
